fixed skill modal and updated favicon

--- a/src/components/SkillModal/styles.css
+++ b/src/components/SkillModal/styles.css
@@ -6,7 +6,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: #000000cc;
+  background-color: #00000088;
+  z-index: 1;
 }
 
 .modal-container {
