--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -1,5 +1,5 @@
 .header-container {
-  position: absolute;
+  position: fixed;
   top: 0;
   right: 0;
   left: 0;
@@ -8,7 +8,7 @@
   justify-content: flex-end;
   align-items: center;
   padding: 32px;
-  z-index: 1;
+  z-index: 2;
 }
 
 .header-option {
@@ -27,6 +27,13 @@
 
 .header-option:hover {
   text-decoration: underline;
+}
+
+@media (max-width: 600px) {
+  .header-container {
+    padding: 24px 32px;
+    background-color: #333333;
+  }
 }
 
 @media (max-width: 480px) {
