--- a/src/components/Loading/styles.css
+++ b/src/components/Loading/styles.css
@@ -1,10 +1,16 @@
 .loading-container {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100%;
-  width: 100%;
   padding-bottom: 6vh;
+  background: linear-gradient(#333333, #000000);
+  overflow: hidden;
+  z-index: 3;
 }
 
 .loading-wheel {
