--- a/src/components/SkillModal/styles.css
+++ b/src/components/SkillModal/styles.css
@@ -52,6 +52,7 @@
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
+  padding: 12px 0;
 }
 
 .modal-right-container {
@@ -59,7 +60,7 @@
   flex-direction: column;
   justify-content: center;
   width: 60%;
-  padding: 0 40px;
+  padding: 0 40px 20px 40px;
   height: 100%;
   background: linear-gradient(#555555, #111111);
   overflow-y: scroll;
@@ -122,7 +123,7 @@
   .modal-image {
     min-width: 80px;
     width: 25%;
-    padding: 5% 0;
+    padding: 5% 0 0 0;
     margin: 0 5%;
   }
 }
