--- a/src/components/SkillModal/styles.css
+++ b/src/components/SkillModal/styles.css
@@ -8,6 +8,7 @@
   align-items: center;
   background-color: #00000088;
   z-index: 1;
+  padding-top: 60px;
 }
 
 .modal-container {
@@ -122,11 +123,12 @@
 @media (max-width: 450px) {
   .modal-image {
     min-width: 80px;
-    width: 25%;
+    width: 20%;
     padding: 5% 0 0 0;
     margin: 0 5%;
   }
   .modal-container {
-    height: 60vh;
+    margin-top: 0px;
+    min-height: 80vh;
   }
 }
