--- a/src/screens/about/styles.css
+++ b/src/screens/about/styles.css
@@ -2,7 +2,7 @@
   position: relative;
   height: 100%;
   width: 100%;
-  overflow: hidden;
+  overflow-y: scroll;
   padding: 90px 20px 5vh 20px;
 }
 
@@ -135,6 +135,7 @@
   .about-container {
     flex-direction: column;
     justify-content: flex-start;
+    height: unset;
   }
   .about-images-container {
     width: 100%;
@@ -171,14 +172,22 @@
   .about-text-container {
     width: 100%;
     z-index: 1;
-    overflow-y: scroll;
   }
   .about-paragraph-title {
     font-size: 32px !important;
   }
 }
 
-@media (max-width: 450px) {
+@media (max-width: 550px) {
+  .about-images-container {
+    height: 230px;
+  }
+}
+
+@media (max-width: 475px) {
+  .about-images-container {
+    height: 200px;
+  }
   .about-images-container img:nth-child(1) {
     top: 20%;
     left: 0;
