--- a/src/screens/about/styles.css
+++ b/src/screens/about/styles.css
@@ -15,6 +15,7 @@
   height: 100%;
   width: 100%;
   z-index: 2;
+  padding-top: 20px;
 }
 
 .about-title {
@@ -106,7 +107,7 @@
 .about-text-container {
   z-index: 2;
   width: 50%;
-  padding: 0 5% 60px 5%;
+  padding: 0px 5% 100px 5%;
 }
 
 .about-paragraph-title {
