--- a/src/screens/about/styles.css
+++ b/src/screens/about/styles.css
@@ -146,26 +146,26 @@
   }
   .about-images-container img:nth-child(1) {
     top: 20%;
-    left: 0;
+    left: 4%;
     height: 60%;
     width: unset;
   }
   .about-images-container img:nth-child(2) {
     top: 10%;
-    left: 16%;
+    left: 18%;
     height: 80%;
     width: unset;
   }
   .about-images-container img:nth-child(3) {
     top: 15%;
-    right: 0;
+    right: 4%;
     height: 70%;
     width: unset;
   }
   .about-images-container img:nth-child(4) {
-    top: 0;
+    top: 5%;
     left: 40%;
-    height: 100%;
+    height: 90%;
     width: unset;
   }
   .about-images-container img:hover {
@@ -193,26 +193,26 @@
   }
   .about-images-container img:nth-child(1) {
     top: 20%;
-    left: 0;
+    left: 4%;
     height: 60%;
     width: unset;
   }
   .about-images-container img:nth-child(2) {
-    top: 10%;
+    top: 12%;
     left: 16%;
-    height: 80%;
+    height: 76%;
     width: unset;
   }
   .about-images-container img:nth-child(3) {
     top: 15%;
-    right: 0;
+    right: 4%;
     height: 70%;
     width: unset;
   }
   .about-images-container img:nth-child(4) {
-    top: 5%;
+    top: 7.5%;
     left: 36%;
-    height: 90%;
+    height: 85%;
     width: unset;
   }
 }
