--- a/src/components/ProjectCard/styles.css
+++ b/src/components/ProjectCard/styles.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  min-height: calc(100vh - 60px);
   width: 100vw;
   padding: 10vh 10vw;
 }
@@ -15,6 +15,7 @@
 .project-card-container {
   display: flex;
   flex-direction: row;
+  align-items: center;
   width: 100%;
   height: 100%;
   max-width: 1024px;
@@ -68,7 +69,7 @@
   display: inline-block;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 780px) {
   .project-card-main-container {
     height: unset;
     padding: 5vh 10vw;
