--- a/src/components/ProjectCard/styles.css
+++ b/src/components/ProjectCard/styles.css
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   min-height: calc(100vh - 60px);
-  width: 100vw;
+  width: 100%;
   padding: 10vh 10vw;
 }
 
